api model updates
