# src/serve-prompt/dto/execute-prompt-body.dto.ts
@@ -1,0 +1,6 @@
+import { IsObject } from 'class-validator';
+
+export class ExecutePromptBodyDto {
+  @IsObject()
+  variables: Record<string, any>;
+} 
