# src/serve-prompt/dto/execute-prompt-params.dto.ts
@@ -1,0 +1,15 @@
+import { IsNotEmpty, IsString } from 'class-validator';
+
+export class ExecutePromptParamsDto {
+  @IsString()
+  @IsNotEmpty()
+  projectId: string;
+
+  @IsString()
+  @IsNotEmpty()
+  promptName: string;
+
+  @IsString()
+  @IsNotEmpty()
+  versionTag: string;
+} 
